minitrace-macro/tests/ui/err/name-is-not-an-assignment-expression.stderr
error: expected string literal
 --> tests/ui/err/name-is-not-an-assignment-expression.rs:3:9
  |
3 | #[trace(b)]
  |         ^
